--- a/_posts/blog/2016-08-18-CPS.md
+++ b/_posts/blog/2016-08-18-CPS.md
@@ -10,4 +10,13 @@ image:
 date: 2016-08-18T15:39:55-04:00
 ---
 
-<iframe width="1200" height="900" src="https://cdn.rawgit.com/vincentpham1991/c8b452c9423c35edf688c0a0a4066b69/raw/a5efff21913ec86444f5009b546e4e5e3e3216c2/index.html" frameborder="0" scrolling="no" ></iframe>
+<iframe width="1200" height="750" src="https://cdn.rawgit.com/vincentpham1991/c8b452c9423c35edf688c0a0a4066b69/raw/a5efff21913ec86444f5009b546e4e5e3e3216c2/index.html" frameborder="0" scrolling="no" ></iframe>
+
+The dataset is obtained from Chicago's open source data. It contains Chicago Public High School information for the 2013-2014 school year. You can find it under
+[Chicago Public Schools - High School Progress Report (2013-2014)](https://data.cityofchicago.org/Education/Chicago-Public-Schools-High-School-Progress-Report/2m8w-izji){:target="_blank"}. Schools are mapped at the longitude and latitude they are located in. Each point is hoverable to view additional information.
+
+__Colors:__ Each point is a color gradient from red to green where red is performed relatively poor compared to the other schools, white is average, and green is well. 
+
+__Buttons [First Row]:__ The individual button shows performance at the school level, and group button shows performance at the zip-code level where the size of the points correlates with how many schools are in that zip-code. Longitude and latitude in the group level corresponds to the average longitude and latitude of all the schools in the zip-code. 
+
+__Buttons [Second Row]:__ The buttons at this level are the metrics that each point is evaluated at, ranging from college enrollment to test scores. 
