update tags, use travels, and added how to d3

--- a/_posts/blog/2017-05-28-GANs.md
+++ b/_posts/blog/2017-05-28-GANs.md
@@ -4,7 +4,7 @@ title: "Generative Adversarial Networks (GANs)"
 modified:
 categories: blog
 excerpt:
-tags: []
+tags: [AI]
 image:
   feature:
 date: 2017-05-28T15:39:55-04:00
