massive link update from rawgit to same page

--- a/_posts/blog/2016-08-18-CPS.md
+++ b/_posts/blog/2016-08-18-CPS.md
@@ -8,7 +8,7 @@ tags: []
 date: 2016-08-18T15:39:55-04:00
 ---
 
-<iframe width="1200" height="750" src="https://cdn.rawgit.com/vincentpham1991/c8b452c9423c35edf688c0a0a4066b69/raw/a5efff21913ec86444f5009b546e4e5e3e3216c2/index.html" frameborder="0" scrolling="no" ></iframe>
+<iframe width="1200" height="750" src="../cps/cps.html" frameborder="0" scrolling="no" ></iframe>
 
 The dataset is obtained from Chicago's open source data. It contains Chicago Public High School information for the 2013-2014 school year. You can find it under
 [Chicago Public Schools - High School Progress Report (2013-2014)](https://data.cityofchicago.org/Education/Chicago-Public-Schools-High-School-Progress-Report/2m8w-izji){:target="_blank"}. Schools are mapped at the longitude and latitude they are located in. Each point is hoverable to view additional information.
